---
layout: default
title: Changes
---

Below you can find a list of all changes applied to the framework through its different releases. This list will be updated whenever there are new functions or improvements being introduced or known bugs corrected.

Hide and show details to releases in clicking on the release you are interested in:

h2(release#r05). Release 0.5 (2011-09-03)

* added new rules
** AnchorsWithoutTargetAttributeRule
** FieldsetContainsLegendRule
* improved reporting functionality
** added functionality to write report results to files and to console
** renamed ConsoleReportWriter to TextReportWriter to reflect that it can also be used to write to files
** added functionality to print out the framework version in reports to AbstractReportWriter
** added XmlReportWriter to write XML based reports to console and files
* fixed maven problems
** due to wrong configuration for resource filtering all-rules.xml ruleset was not provided in the jar
** dependency versions are now defined only in one place (in the bitvunit-project POM)
* added sample project bitvunit-demo to showcase the usage of the framework
* improved JavaDoc
** added package documentation to all packages
** added documentation of ReportingContext
* updated dependencies
** now using htmlunit 2.9
** now using junit 4.9

h2(release#r04). Release 0.4 (2011-07-23)

* added new rules
** AlternativeTextForObjectRule
** AvoidServerSideImageMapRule
* added HtmlPageUtil to create HtmlPage objects from String, Reader, InputStream and URL instances
* updated Hamcrest functionality
** replaced RuleMatcher and RuleSetMatcher by ComplianceMatcher
*** added capability to test <code>java.io.InputStream</code> representations of HTML pages
*** added capability to test <code>java.io.Reader</code> representations of HTML pages
*** added capability to test <code>java.lang.String</code> representations of HTML pages
*** added capability to test <code>java.net.URL</code> representations of HTML pages