@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="/css/reset.css" />
   <link rel="stylesheet" href="/css/bitvunit.css" />
   <link rel="shortcut icon" href="/images/favicon.ico" />
-  <script src="js/jquery-1.6.1.min.js"></script>
-  <script src="js/jquery.url.js"></script>
+  <script src="/js/jquery-1.6.1.min.js"></script>
+  <script src="/js/jquery.url.js"></script>
 </head>
 <body>
   <div id="header">
@@ -18,12 +18,12 @@
     <div id="navigation">
       <ul>
         <li><a href="/">About</a></li>
-        <li><a href="/usage.html">Usage</a></li>
-        <li><a href="/download.html">Download</a></li>
-        <li><a href="/changes.html">Changes</a></li>
-        <li><a href="/contribute.html">Contribute</a></li>
-        <li><a href="/blog.html">Blog</a></li>
-        <li><a href="/feedback.html">Feedback</a></li>
+        <li><a href="/usage">Usage</a></li>
+        <li><a href="/download">Download</a></li>
+        <li><a href="/changes">Changes</a></li>
+        <li><a href="/contribute">Contribute</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/feedback">Feedback</a></li>
       </ul>
     </div>
   </div>
