@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+permalink: blog/index.html
 ---
 
 <p>Here you can find a list of all blog posts:</p>
